--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html,body{
     height:100%;
     background-color: #000;
     color: white;
+    font-family: 'Raleway';
 }
 
 video#bgvid { 
@@ -44,7 +45,6 @@ video#bgvid {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(polina.jpg) no-repeat;
     background-size: cover; 
 }
 
@@ -59,8 +59,6 @@ img#corner-logo {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(polina.jpg) no-repeat;
-    background-size: cover; 
 }
 
 img#center-logo { 
@@ -74,8 +72,40 @@ img#center-logo {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-    background: url(polina.jpg) no-repeat;
-    background-size: cover; 
+}
+
+a#portfolio {
+    position: fixed;
+    z-index: 3;
+    top: 50px;
+    right: 200px;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
+
+a#team {
+    position: fixed;
+    z-index: 3;
+    top: 50px;
+    right: 143px;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
+a#contact {
+    position: fixed;
+    z-index: 3;
+    top: 50px;
+    right: 50px;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
 
 .shadowed {
